Resolves: fdo#43901 and fdo#42577 RTL tollbars mirroring

Change-Id: I32dd8cdd34965bf8dd31729a79b65d8ee78af7dc
Reviewed-on: https://gerrit.libreoffice.org/1187
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>
(cherry picked from commit aa61177f1d339422acb3322c8851962cd1ca7466)

Signed-off-by: Lior Kaplan <kaplanlior@gmail.com>